# redir

./: .gitignore  Cargo.toml  README.md  dev.db
migrations/2023-09-24-083052_create_links/: up.sql
src/: actions.rs  cli.rs  link.rs  main.rs  models.rs  schema.rs
